@@ -60,7 +60,8 @@ public class GenLanguage extends StdLanguage
 	private static final int V_WSETS=1;//L<S[]>
 	private static final int V_HSETS=2;//H<S,S>
 	private static final int V_HELP=3;//S
-	private static final int NUM_VS=4;//S
+	private static final int V_INTS=4;//L<S>
+	private static final int NUM_VS=5;//S
 
 	private static final Object[] makeEmpty()
 	{
@@ -69,6 +70,7 @@ public class GenLanguage extends StdLanguage
 		O[V_WSETS]=new Vector<String[]>();
 		O[V_HSETS]=new Hashtable<String,String>();
 		O[V_HELP]="<ABILITY>This language is not yet documented.";
+		O[V_INTS]=new HashSet<String>();
 		return O;
 	}
 
@@ -113,6 +115,13 @@ public class GenLanguage extends StdLanguage
 	}
 
 	@Override
+	@SuppressWarnings("unchecked")
+	public Set<String> languagesSupported()
+	{
+		return (Set<String>)V(ID,V_INTS);
+	}
+
+	@Override
 	public CMObject newInstance()
 	{
 		try
@@ -152,6 +161,7 @@ public class GenLanguage extends StdLanguage
 										 "WORDS",//2S
 										 "HASHEDWORDS",//2S
 										 "HELP",//27I
+										 "INTERPRETS" // S
 										};
 
 	@Override
@@ -214,6 +224,8 @@ public class GenLanguage extends StdLanguage
 			return CMParms.toKeyValueSlashListString((Map<String, String>) V(ID, V_HSETS));
 		case 5:
 			return (String) V(ID, V_HELP);
+		case 6:
+			return CMParms.combineWith((Set<String>)V(ID,V_INTS), ',');
 		default:
 			if (code.equalsIgnoreCase("javaclass"))
 				return "GenLanguage";
@@ -252,6 +264,8 @@ public class GenLanguage extends StdLanguage
 				ID=val;
 				if(num!=9)
 					CMClass.addClass(CMObjectType.ABILITY,this);
+				if(!((Set<String>)V(ID,V_INTS)).contains(ID))
+					((Set<String>)V(ID,V_INTS)).add(ID);
 			}
 			break;
 		case 1:
@@ -287,6 +301,13 @@ public class GenLanguage extends StdLanguage
 		case 5:
 			SV(ID, V_HELP, val);
 			break;
+		case 6:
+		{
+			final Set<String> ints = new XHashSet<String>(CMParms.parseCommas(val, true));
+			if(!ints.contains(ID()))
+				ints.add(ID());
+			SV(ID, V_INTS, ints);
+		}
 		default:
 			if(code.equalsIgnoreCase("allxml")&&ID.equalsIgnoreCase("GenLanguage"))
 				parseAllXML(val);
