@@ -1,8 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head>
-<meta name="generator" content="HTML Tidy, see www.w3.org"><title></title>
-
-</head>
+<meta name="generator" content="HTML Tidy, see www.w3.org"><title></title></head>
 <body>
 <center>
 <table border="1" bordercolor="gray" cellpadding="10" cellspacing="0" width="90%">
@@ -704,7 +702,13 @@ word
 "CAT" always translated to "DIABLO" in your new language, you would
 define that fact here</td>
 </tr>
-<tr>
+<tr><td><span style="font-style: italic;">Translation Language IDs</span></td><td>A
+list of other language IDs, including the ID of this language. &nbsp;It
+gives a guideline for which other languages will be able to
+incidentally understand this language. &nbsp;For example, if a
+shopkeeper speaks Common, and Common is a Translation Language ID for a
+language called "Common Slang", then the shopkeeper will also
+understand "Common Slang".</td></tr><tr>
 <td><i>Help
 Text</i></td>
 <td>always starting
@@ -2479,7 +2483,9 @@ changeable.</td>
 </tr>
 <tr>
 <td style="font-style: italic;">Level Formula</td>
-<td>either a number, or a formula to adjust mob/item levels:&nbsp; @x1 = base areas median level, @x2 = specific mob/item level&nbsp; @x2 = the plane traveling players level. &nbsp;See also HELP MATHFORMULA</td>
+<td>either a number, or a formula to adjust mob/item levels:&nbsp; @x1
+= base areas median level, @x2 = specific mob/item level&nbsp; @x2 =
+the plane traveling players level. &nbsp;See also HELP MATHFORMULA</td>
 </tr>
 <tr>
 <td style="font-style: italic;">MOB Resistances</td>
@@ -2557,7 +2563,9 @@ anything to be breathed)</td>
 </tr>
 <tr>
 <td style="font-style: italic;">Room Descriptions</td>
-<td>Comma delimited list of adjectives to sprinkle in room descriptions.&nbsp; List may be prefixed with a number for % chance. &nbsp;List may also begin with "UP " to make description uppercase.</td>
+<td>Comma delimited list of adjectives to sprinkle in room
+descriptions.&nbsp; List may be prefixed with a number for % chance.
+&nbsp;List may also begin with "UP " to make description uppercase.</td>
 </tr>
 <tr>
 <td style="font-style: italic;">Area Effects</td>
@@ -2583,7 +2591,8 @@ AbilityFlag(arg) or AbilityType(arg) or number(x/y) where x is the number of ski
 </tr>
 <tr>
 <td style="font-style: italic;">MOB Factions</td>
-<td>Space delimited list of FactionIDs(AMOUNT) to give mobs faction. Use a FactionID of "*" to activate coffeemud.ini reaction faction</td>
+<td>Space delimited list of FactionIDs(AMOUNT) to give mobs faction.
+Use a FactionID of "*" to activate coffeemud.ini reaction faction</td>
 </tr>
 <tr>
 <td style="font-style: italic;">Area Blurbs</td>
